requirements.txt
Got it. For your maze_tracer_tk.py you only need the standard library plus Tkinter. In Conda, Tkinter comes from the tk package.

Minimal conda setup (Linux/macOS/Windows)



# Create a fresh env (Python 3.11 or 3.10 recommended)
conda create -n maze-tracer python=3.11 tk -y
conda activate maze-tracer

# (Optional) if you prefer pip inside the env
python -m pip install --upgrade pip


# Create a fresh env (Python 3.11 or 3.10 recommended)
conda create -n maze-tracer python=3.11 tk -y
conda activate maze-tracer

# (Optional) if you prefer pip inside the env
python -m pip install --upgrade pip


python maze_tracer_tk.py



sudo apt-get update
sudo apt-get install -y python3-tk



Optional (only if you later add features)

numpy – vector math speedups

pillow – if you add image I/O

pyinstaller – to build a standalone EXE/app

But for the code you posted, tk is the only Conda package you need.





















You said:
RAW_OBJ_VERTS = """v -11.6719 8.96122 -147.218
v -11.6667 8.96366 -147.218
v -10.4565 8.76028 -147.941
v -10.457 8.76312 -147.936
v -10.4537 8.76151 -147.937
v -10.4553 8.76816 -147.94
v -11.7773 10.5791 -147.598
v -11.7757 10.5808 -147.6
v -11.7787 10.5826 -147.598
v -11.7787 10.5826 -147.598
v -11.7772 10.5857 -147.598
v -11.7735 10.5821 -147.594
v -11.7749 10.5844 -147.593
v -10.0773 10.6389 -148.881
v -10.0744 10.637 -148.881
v -10.0752 10.6408 -148.883
v -10.0752 10.6408 -148.883
v -10.0788 10.6437 -148.88
v -10.075 10.639 -148.876
v -10.075 10.639 -148.876
v -10.0756 10.6435 -148.878
v -10.0714 10.6426 -148.878
v -10.0696 10.6394 -148.876
v -11.9617 9.97881 -146.239
v -11.9621 9.98023 -146.237
v -11.9177 11.1746 -147.312
v -11.9174 11.1755 -147.313
v -11.7667 8.55602 -144.816
v -11.7628 8.55779 -144.816
v -11.7628 8.55779 -144.816
v -8.90512 8.74742 -147.801
v -8.9024 8.74551 -147.8
v -8.9024 8.74551 -147.8
v -8.90345 8.74927 -147.802
v -8.90538 8.7479 -147.795
v -8.90538 8.7479 -147.795
v -8.90105 8.74924 -147.801
v -8.90037 8.74738 -147.8
v -8.9024 8.74514 -147.795
v -8.90287 8.74835 -147.794
v -8.90306 8.75582 -147.799
v -8.90264 8.75559 -147.799
v -12.1441 9.37482 -144.88
v -12.1449 9.37605 -144.878
v -12.1449 9.37605 -144.878
v -12.1458 9.38097 -144.877
v -12.1413 9.37777 -144.878
v -9.42928 10.6277 -148.826
v -9.91673 8.55835 -146.072
v -9.91636 8.55815 -146.07
v -12.0561 11.766 -147.028
v -12.0561 11.766 -147.028
v -12.2066 9.40472 -144.154
v -12.207 9.40637 -144.154
v -10.9309 8.37156 -144.347
v -10.9323 8.37141 -144.342
v -10.9305 8.37098 -144.343
v -10.9305 8.37098 -144.343
v -8.78389 10.6165 -148.769
v -8.78389 10.6165 -148.769
v -8.7829 10.6146 -148.767
v -8.78767 10.6152 -148.762
v -10.9297 8.37473 -144.343
v -8.78687 10.6189 -148.765
""" like this extract only coordinates "baby.obj" from this file given and put like this " in text and expoet "RAW_OBJ_VERTS = """v -11.6719 8.96122 -147.218
v -11.6667 8.96366 -147.218
v -10.4565 8.76028 -147.941
v -10.457 8.76312 -147.936
v -10.4537 8.76151 -147.937
v -10.4553 8.76816 -147.94
v -11.7773 10.5791 -147.598
v -11.7757 10.5808 -147.6
v -11.7787 10.5826 -147.598
v -11.7787 10.5826 -147.598
v -11.7772 10.5857 -147.598
v -11.7735 10.5821 -147.594
v -11.7749 10.5844 -147.593
v -10.0773 10.6389 -148.881
v -10.0744 10.637 -148.881
v -10.0752 10.6408 -148.883
v -10.0752 10.6408 -148.883
v -10.0788 10.6437 -148.88
v -10.075 10.639 -148.876
v -10.075 10.639 -148.876
v -10.0756 10.6435 -148.878
v -10.0714 10.6426 -148.878
v -10.0696 10.6394 -148.876
v -11.9617 9.97881 -146.239
v -11.9621 9.98023 -146.237
v -11.9177 11.1746 -147.312
v -11.9174 11.1755 -147.313
v -11.7667 8.55602 -144.816
v -11.7628 8.55779 -144.816
v -11.7628 8.55779 -144.816
v -8.90512 8.74742 -147.801
v -8.9024 8.74551 -147.8
v -8.9024 8.74551 -147.8
v -8.90345 8.74927 -147.802
v -8.90538 8.7479 -147.795
v -8.90538 8.7479 -147.795
v -8.90105 8.74924 -147.801
v -8.90037 8.74738 -147.8
v -8.9024 8.74514 -147.795
v -8.90287 8.74835 -147.794
v -8.90306 8.75582 -147.799
v -8.90264 8.75559 -147.799
v -12.1441 9.37482 -144.88
v -12.1449 9.37605 -144.878
v -12.1449 9.37605 -144.878
v -12.1458 9.38097 -144.877
v -12.1413 9.37777 -144.878
v -9.42928 10.6277 -148.826
v -9.91673 8.55835 -146.072
v -9.91636 8.55815 -146.07
v -12.0561 11.766 -147.028
v -12.0561 11.766 -147.028
v -12.2066 9.40472 -144.154
v -12.207 9.40637 -144.154
v -10.9309 8.37156 -144.347
v -10.9323 8.37141 -144.342
v -10.9305 8.37098 -144.343
v -10.9305 8.37098 -144.343
v -8.78389 10.6165 -148.769
v -8.78389 10.6165 -148.769
v -8.7829 10.6146 -148.767
v -8.78767 10.6152 -148.762
v -10.9297 8.37473 -144.343
v -8.78687 10.6189 -148.765
""" write an python
ChatGPT said:

Here’s a Python script that reads a .obj file (like baby.obj), extracts only vertex coordinates (lines starting with “v ”), and exports them as a single Python variable string like your example (RAW_OBJ_VERTS = """ ... """):

# extract_obj_vertices.py

def extract_obj_vertices(input_path, output_path):
    """
    Extracts only vertex coordinates (lines starting with 'v ')
    from a .obj file and writes them into a Python file as
    RAW_OBJ_VERTS = """v x y z ..."""
    """
    with open(input_path, 'r') as f:
        lines = f.readlines()

    # Filter only vertex lines
    vertex_lines = [line.strip() for line in lines if line.startswith("v ")]

    # Prepare the output string
    output_text = 'RAW_OBJ_VERTS = """\n' + "\n".join(vertex_lines) + '\n"""'

    # Write to new file
    with open(output_path, 'w') as f:
        f.write(output_text)

    print(f"✅ Extracted {len(vertex_lines)} vertex lines from '{input_path}'")
    print(f"📁 Saved to: {output_path}")


# Example usage
if __name__ == "__main__":
    extract_obj_vertices("baby.obj", "baby_vertices.py")

🔧 How to use

    Save this code as extract_obj_vertices.py.

    Place it in the same folder as your baby.obj.

    Run in terminal:

python3 extract_obj_vertices.py

It will create a file named baby_vertices.py containing:

    RAW_OBJ_VERTS = """v -11.6719 8.96122 -147.218
    v -11.6667 8.96366 -147.218
    ...
    """

Would you like me to modify it so it automatically skips duplicate vertex lines (e.g., repeated coordinates)?
You said:
File "/home/cadd-center/Music/objextract.py", line 7
    RAW_OBJ_VERTS = """v x y z ..."""
                       ^
SyntaxError: invalid syntax
ChatGPT said:

Ah — good catch ✅

That SyntaxError happened because of the way triple quotes (""") were used inside another triple-quoted string in the docstring, which confuses Python. Let’s fix that cleanly.

Here’s the correct and fully working version 👇
✅ Fixed Python Script: objextract.py

# objextract.py
# Extracts vertex coordinates from an .obj file into RAW_OBJ_VERTS = """..."""

def extract_obj_vertices(input_path, output_path):
    """
    Extracts only vertex coordinates (lines starting with 'v ')
    from a .obj file and writes them into a Python file as:
        RAW_OBJ_VERTS = \"\"\"v x y z ...\"\"\"
    """
    with open(input_path, 'r') as f:
        lines = f.readlines()

    # Keep only lines starting with "v "
    vertex_lines = [line.strip() for line in lines if line.startswith("v ")]

    # Join them into a triple-quoted string
    output_text = 'RAW_OBJ_VERTS = """\n' + "\n".join(vertex_lines) + '\n"""'

    # Write to output file
    with open(output_path, 'w') as f:
        f.write(output_text)

    print(f"✅ Extracted {len(vertex_lines)} vertex lines from '{input_path}'")
    print(f"📁 Saved to: {output_path}")


# Example usage:
if __name__ == "__main__":
    extract_obj_vertices("baby.obj", "baby_vertices.py")

🧠 How to Run

python3 objextract.py

If your baby.obj is in the same directory, this will produce a new file:

baby_vertices.py

containing something like:

RAW_OBJ_VERTS = """v -11.6719 8.96122 -147.218
v -11.6667 8.96366 -147.218
v -10.4565 8.76028 -147.941
...
"""

Would you like it to also automatically remove duplicate vertices (same v x y z line repeated multiple times)? I can add that version next.
